# scutar

./: Agent.md  README.md  package-lock.json  package.json
docs/: adding-a-backend.md  architecture.md
engine/: Cargo.toml  Dockerfile
engine/crates/scutar-backends/: Cargo.toml
engine/crates/scutar-backends/src/: factory.rs  lib.rs
engine/crates/scutar-backends/src/azure/: mod.rs
engine/crates/scutar-backends/src/gcs/: mod.rs
engine/crates/scutar-backends/src/local/: mod.rs
engine/crates/scutar-backends/src/s3/: mod.rs
engine/crates/scutar-backends/src/sftp/: mod.rs
engine/crates/scutar-cli/: Cargo.toml
engine/crates/scutar-cli/src/: main.rs
engine/crates/scutar-core/: Cargo.toml
engine/crates/scutar-core/src/: backend.rs  error.rs  lib.rs  repo_layout.rs  spec.rs
engine/crates/scutar-engine/: Cargo.toml
engine/crates/scutar-engine/src/: chunker.rs  encryption.rs  lib.rs  manifest.rs  mirror.rs  packer.rs  report.rs  restore.rs  retention.rs  snapshot.rs  walker.rs
examples/: README.md
examples/backups/: mirror-15min.yaml  snapshot-daily-encrypted.yaml  snapshot-oneoff.yaml  snapshot-suspended.yaml
examples/connections/: azure-blob.yaml  gcs.yaml  local.yaml  s3-aws.yaml  s3-minio.yaml  sftp.yaml
examples/restore/: restore-snapshot.yaml
examples/walkthrough/: 01-namespace.yaml  02-secret-s3-creds.yaml  03-connection-s3.yaml  04-pvc-source.yaml  05-encryption-password.yaml  06-backup-snapshot.yaml  07-restore.yaml
operator/: Dockerfile  package.json  tsconfig.json
operator/deployment/helm/: Chart.yaml  values.yaml
operator/deployment/helm/crds/: scutarbackup.yaml  scutarconnection.yaml  scutarrestorerequest.yaml  scutarsnapshot.yaml
operator/deployment/helm/templates/: deployment.yaml  rbac.yaml  serviceaccount.yaml
operator/src/: consts.ts  index.ts
operator/src/k8s/: client.ts  dispatcher.ts
operator/src/services/: job-builder.ts  reconciler.ts  spec-builder.ts  validation.ts
operator/src/types/: backup-spec.ts  crd.ts
server/: README.md
server/backend/: env.template  package.json
server/backend/src/: index.ts  k8s.ts  scutar-crd.ts  secrets.ts
server/ui/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
server/ui/src/: App.vue  main.ts
server/ui/src/components/: BackupForm.vue  CloudConnectionHelper.vue  StorageConfigForm.vue
server/ui/src/constants/: destinations.ts
server/ui/src/router/: index.ts
server/ui/src/styles/: app.css
server/ui/src/types/: backup.ts
server/ui/src/utils/: storage-uri.ts
server/ui/src/views/: BackupFormView.vue  BackupsView.vue  CredentialsView.vue  DRView.vue  DashboardView.vue  ScheduledView.vue
