[package]
name = "scutar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Scutar runner binary — entrypoint for the engine container"

[[bin]]
name = "scutar-runner"
path = "src/main.rs"

[dependencies]
scutar-core.workspace = true
scutar-engine.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
