[package]
name = "scutar-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Scutar engine: snapshot, dedup, mirror and restore logic"

[dependencies]
scutar-core.workspace = true
scutar-backends.workspace = true
async-trait.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Snapshot mode building blocks
blake3.workspace = true
fastcdc.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
base64.workspace = true

# Filesystem walking + globbing
walkdir.workspace = true
globset.workspace = true
time.workspace = true
